PIM-1827: Fix CSS to align the area for file upload

--- a/src/Pim/Bundle/UIBundle/Resources/public/css/form.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/css/form.less
@@ -163,6 +163,9 @@ a.accordion-toggle {
 
 .form-horizontal .control-group {
   margin-bottom: 20px;
+  max-width: 50%;
+  margin-left: 25%;
+  margin-right: 25%;
   label.control-label:after {
     content: '';
   }
